test/fixtures/public/analysis/success/undefined_var1.jmm
class Child {
    int a;
    boolean b;

    public int f(int[] args) {
        int c;
        a = this.f1();
        c = a;

        return 0;
    }

    public int f1() {
        return 2;
    }
}